// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CsvUpload calls onChangeHandler when file is uploaded. Image uploaded, state.selectedFile should be undefined 1`] = `
Object {
  "csvData": Array [],
  "selectedFile": null,
}
`;

exports[`CsvUpload calls onChangeHandler when file is uploaded. Text file uploaded, state.selectedFile should be changed 1`] = `
Object {
  "csvData": Array [],
  "selectedFile": Object {
    "type": "text/plain",
  },
}
`;

exports[`CsvUpload renders correct html 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="offset-md-3 col-md-6"
      >
        <div
          class="form-group files"
        >
          <label>
            Upload Your CSV File 
          </label>
          <a
            download="sample.csv"
            href="sample.csv"
          >
            <button
              class="btn btn-info btn-sm float-right"
              type="button"
            >
              Download a sample CSV file
            </button>
          </a>
          <input
            class="form-control"
            type="file"
          />
        </div>
        <div
          class="form-group"
        >
          <div
            class="Toastify"
          />
        </div>
        <button
          class="btn btn-success btn-block"
          type="button"
        >
          Upload
        </button>
        <div
          id="scatterPlots"
        >
          <svg
            align="center"
            height="500"
            width="600"
          >
            <g
              class="axis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="middle"
              transform="translate(100, 400)"
            >
              <path
                class="domain"
                d="M0.5,6V0.5H300.5V6"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(150.5,0)"
              >
                <line
                  stroke="currentColor"
                  y2="6"
                />
                <text
                  dy="0.71em"
                  fill="currentColor"
                  y="9"
                >
                  0
                </text>
              </g>
            </g>
            <g
              class="axis"
              fill="none"
              font-family="sans-serif"
              font-size="10"
              text-anchor="end"
              transform="translate(100, 100)"
            >
              <path
                class="domain"
                d="M-6,300.5H0.5V0.5H-6"
                stroke="currentColor"
              />
              <g
                class="tick"
                opacity="1"
                transform="translate(0,150.5)"
              >
                <line
                  stroke="currentColor"
                  x2="-6"
                />
                <text
                  dy="0.32em"
                  fill="currentColor"
                  x="-9"
                >
                  0
                </text>
              </g>
            </g>
          </svg>
          <div
            class="tooltip"
            style="opacity: 0;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
